[gd_scene load_steps=4 format=3 uid="uid://bh28cxrfd8kvs"]

[ext_resource type="Script" uid="uid://bpu6hua6npstl" path="res://control.gd" id="1_fvjlm"]
[ext_resource type="AudioStream" uid="uid://d0t5hllag4lwg" path="res://sound/sfx-5.mp3" id="2_7a82i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7a82i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvjlm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TerminalOutput" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 438.0
grow_horizontal = 2
bbcode_enabled = true
text = "  "
scroll_following = true

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7a82i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 4
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -49.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "#"

[node name="CommandInput" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_7a82i")
max_length = 100
keep_editing_on_text_submit = true
context_menu_enabled = false
backspace_deletes_composite_character_enabled = true
